Add configuration to disable signing (Fixes #817) (#848)
Signed-off-by: Jeroen van Erp <jeroen@hierynomus.com>